--- a/data/process.ipynb
+++ b/data/process.ipynb
@@ -7,7 +7,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4                    1408         40.0                9       0   No Failure  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "Target                      0.0     0.00      1.0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "4   No Failure"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "5"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
        "4           40                9       0       1       0             1  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,207 +950,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Air temperature [K]</th>\n",
-       "      <th>Process temperature [K]</th>\n",
-       "      <th>Rotational speed [rpm]</th>\n",
-       "      <th>Torque [Nm]</th>\n",
-       "      <th>Tool wear [min]</th>\n",
-       "      <th>Type_H</th>\n",
-       "      <th>Type_L</th>\n",
-       "      <th>Type_M</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>298</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1551</td>\n",
-       "      <td>42</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>298</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>46</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>298</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1498</td>\n",
-       "      <td>49</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>298</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1433</td>\n",
-       "      <td>39</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>298</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>40</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9995</th>\n",
-       "      <td>298</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1604</td>\n",
-       "      <td>29</td>\n",
-       "      <td>14</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9996</th>\n",
-       "      <td>298</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1632</td>\n",
-       "      <td>31</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>299</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1645</td>\n",
-       "      <td>33</td>\n",
-       "      <td>22</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>299</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1408</td>\n",
-       "      <td>48</td>\n",
-       "      <td>25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>299</td>\n",
-       "      <td>308</td>\n",
-       "      <td>1500</td>\n",
-       "      <td>40</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>10000 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Air temperature [K]  Process temperature [K]  Rotational speed [rpm]  \\\n",
-       "0                     298                      308                    1551   \n",
-       "1                     298                      308                    1408   \n",
-       "2                     298                      308                    1498   \n",
-       "3                     298                      308                    1433   \n",
-       "4                     298                      308                    1408   \n",
-       "...                   ...                      ...                     ...   \n",
-       "9995                  298                      308                    1604   \n",
-       "9996                  298                      308                    1632   \n",
-       "9997                  299                      308                    1645   \n",
-       "9998                  299                      308                    1408   \n",
-       "9999                  299                      308                    1500   \n",
-       "\n",
-       "      Torque [Nm]  Tool wear [min]  Type_H  Type_L  Type_M  \n",
-       "0              42                0       0       0       1  \n",
-       "1              46                3       0       1       0  \n",
-       "2              49                5       0       1       0  \n",
-       "3              39                7       0       1       0  \n",
-       "4              40                9       0       1       0  \n",
-       "...           ...              ...     ...     ...     ...  \n",
-       "9995           29               14       0       0       1  \n",
-       "9996           31               17       1       0       0  \n",
-       "9997           33               22       0       0       1  \n",
-       "9998           48               25       1       0       0  \n",
-       "9999           40               30       0       0       1  \n",
-       "\n",
-       "[10000 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X = df.drop([\"Failure Type\"],axis=1)\n",
-    "y = df['Failure Type']\n",
-    "X = pd.get_dummies(X).astype('int')\n",
-    "X"
+    "# X = df.drop([\"Failure Type\"],axis=1)\n",
+    "# y = df['Failure Type']\n",
+    "# X = pd.get_dummies(X).astype('int')\n",
+    "# X"
    ]
   },
   {
@@ -1169,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1008,7 @@
        "        1.        ]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1031,7 @@
        "['scaler.pkl']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,19 +1057,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert X and y to pandas DataFrame\n",
     "X_df = pd.DataFrame(X_scaled, columns=X_columns)\n",
-    "y_df = pd.DataFrame(y, columns=['Target'])\n",
+    "y_df = pd.DataFrame(y, columns=['Failure Type'])\n",
     "\n",
     "# Concatenate X and y along columns\n",
     "df = pd.concat([X_df, y_df], axis=1)\n",
-    "\n",
+    "df.rename(columns={'Failure Type': 'Target'}, inplace=True)\n",
     "# Write DataFrame to CSV file\n",
     "df.to_csv('processed_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Failure Type\n",
+      "0                1\n",
+      "1                1\n",
+      "2                1\n",
+      "3                1\n",
+      "4                1\n",
+      "...            ...\n",
+      "9995             1\n",
+      "9996             1\n",
+      "9997             1\n",
+      "9998             1\n",
+      "9999             1\n",
+      "\n",
+      "[10000 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_df)"
    ]
   }
  ],
